# cookiecutter-uv-python

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  __init__.py  cli.py  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
