[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]
dependencies = [
    "fastcore>=1.5.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.259",
    "pre-commit>=3.0.0",
    {% if cookiecutter.command_line_interface|lower == "typer" %}
    "typer>=0.7.0",
    {% endif %}
]

[project.urls]
"Homepage" = "https://github.com/QIanGua/{{ cookiecutter.project_slug }}"
"Bug Reports" = "https://github.com/QIanGua/{{ cookiecutter.project_slug }}/issues"

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.project_slug }}"]

[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version }}"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "C4", "DTZ", "T10", "EM", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"]
ignore = []
flake8-quotes = { docstring-quotes = "double", inline-quotes = "double" }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov={{ cookiecutter.project_slug }}"
